src/parser.c
/**
 * @file parser.c
 * @author Marek Joukl (xjoukl00), Ondrej Kožányi (xkozan01)
 * @brief Parser using recursive descent
 */

#include "parser.h"
#include "generator.h"

data_t *CreateData(bool function, int line) {
    data_t *data = malloc(sizeof(data_t));
    if (data == NULL) {
        fprintf(stderr, "Error: parser.c - data_init() - malloc failed\n");
        exit(INTERNAL_ERROR);
    }
    data->is_function = function;
    data->item_type = TYPE_UNDEFINED;
    data->can_be_nil = false;
    data->line = line;
    data->value_is_nil = false;
    data->param_count = 0;
    data->param_names = NULL;
    data->params_id = NULL;
    data->param_types = NULL;
    data->is_modifiable = true;
    //data->is_defined = true;
    data->string_value = NULL;
    data->numeric_value = 0;
    data->blinded_sign = false;
    data->param_count_current = 0;
    data->was_initialized = false;
    return data;
}
Generator g;
void StartParser(bool is_first_analysis, symtable_stack_t *stack) {
    //Symtable *table = malloc(sizeof(Symtable));
//    if (table == NULL) {
//        fprintf(stderr, "Error: parser.c - StartParser() - malloc failed\n");
//        exit(INTERNAL_ERROR);
//    }
    Lexeme token;
//    SymtableInit(table);
//    SymtableStackPush(stack, table);

    
    StartGenerator(&g);

    token = get_next_non_whitespace_lexeme();


    if (is_first_analysis) {
        // ###########################################
        // adding predefined functions to global frame
        // func readString() -> String?
        data_t *data = CreateData(true, 0);
        char *rdStr = malloc(sizeof(char) * 15);
        strcpy(rdStr, "readString");
        data->item_type = TYPE_STRING_NIL;
        data->can_be_nil = true;
        data->is_modifiable = false;
        data->string_value = rdStr;
        SymtableAddItem(stack->array[stack->size - 1], rdStr, data);

        // func readInt() -> Int?
        data = CreateData(true, 0);
        char *rdInt = malloc(sizeof(char) * 15);
        strcpy(rdInt, "readInt");
        data->item_type = TYPE_INT_NIL;
        data->can_be_nil = true;
        data->is_modifiable = false;
        data->string_value = rdInt;
        SymtableAddItem(stack->array[stack->size - 1], rdInt, data);

        // func readDouble() -> Double?
        data = CreateData(true, 0);
        char *rdDbl = malloc(sizeof(char) * 15);
        strcpy(rdDbl, "readDouble");
        data->item_type = TYPE_DOUBLE_NIL;
        data->can_be_nil = true;
        data->is_modifiable = false;
        data->string_value = rdDbl;
        SymtableAddItem(stack->array[stack->size - 1], rdDbl, data);

        // func write( term1 , term2 , …, term𝑛 )  TODO: add write function
        data = CreateData(true, 0);
        data->item_type = TYPE_UNDEFINED;
        char *wrt = malloc(sizeof(char) * 15);
        strcpy(wrt, "write");
        SymtableAddItem(stack->array[stack->size - 1], wrt, data);

        // func Int2Double(_ term: Int) -> Double
        data = CreateData(true, 0);
        char *Int2Dbl = malloc(sizeof(char) * 15);
        strcpy(Int2Dbl, "Int2Double");
        data->item_type = TYPE_DOUBLE;
        data->can_be_nil = false;
        data->is_modifiable = false;
        data->string_value = Int2Dbl;
        data->param_names = malloc(sizeof(char *) * 1);
        data->param_names[0] = NULL;
        data->param_count = 1;
        data->param_types = malloc(sizeof(data_type_t) * 1);
        data->param_types[0] = TYPE_INT;
        data->params_id = malloc(sizeof(char *) * 1);
        data->params_id[0] = malloc(sizeof(char) * 10);
        strcpy(data->params_id[0], "term");
        SymtableAddItem(stack->array[stack->size - 1], Int2Dbl, data);

        // func Double2Int(_ term: Double) -> Int
        data = CreateData(true, 0);
        char *Dbl2Int = malloc(sizeof(char) * 15);
        strcpy(Dbl2Int, "Double2Int");
        data->item_type = TYPE_INT;
        data->can_be_nil = false;
        data->is_modifiable = false;
        data->string_value = Dbl2Int;
        data->param_names = malloc(sizeof(char *) * 1);
        data->param_names[0] = NULL;
        data->param_count = 1;
        data->param_types = malloc(sizeof(data_type_t) * 1);
        data->param_types[0] = TYPE_DOUBLE;
        data->params_id = malloc(sizeof(char *) * 1);
        data->params_id[0] = malloc(sizeof(char) * 10);
        strcpy(data->params_id[0], "term");
        SymtableAddItem(stack->array[stack->size - 1], Dbl2Int, data);

        // func length(_ s: String) -> Int
        data = CreateData(true, 0);
        char *len = malloc(sizeof(char) * 10);
        strcpy(len, "length");
        data->item_type = TYPE_INT;
        data->can_be_nil = false;
        data->is_modifiable = false;
        data->string_value = len;
        data->param_names = malloc(sizeof(char *) * 1);
        data->param_names[0] = NULL;
        data->param_count = 1;
        data->param_types = malloc(sizeof(data_type_t) * 1);
        data->param_types[0] = TYPE_STRING;
        data->params_id = malloc(sizeof(char *) * 1);
        data->params_id[0] = malloc(sizeof(char) * 10);
        strcpy(data->params_id[0], "s");
        SymtableAddItem(stack->array[stack->size - 1], len, data);

        // func substr(of s: String, startingAt i: Int, endingBefore j: Int) -> String?
        data = CreateData(true, 0);
        char *substr = malloc(sizeof(char) * 10);
        strcpy(substr, "substring");
        data->item_type = TYPE_STRING_NIL;
        data->can_be_nil = true;
        data->is_modifiable = false;
        data->string_value = substr;
        data->param_names = malloc(sizeof(char *) * 3);
        data->param_names[0] = malloc(sizeof(char) * 10);
        strcpy(data->param_names[0], "of");
        data->param_names[1] = malloc(sizeof(char) * 15);
        strcpy(data->param_names[1], "startingAt");
        data->param_names[2] = malloc(sizeof(char) * 15);
        strcpy(data->param_names[2], "endingBefore");
        data->param_count = 3;
        data->param_types = malloc(sizeof(data_type_t) * 3);
        data->param_types[0] = TYPE_STRING;
        data->param_types[1] = TYPE_INT;
        data->param_types[2] = TYPE_INT;
        data->params_id = malloc(sizeof(char *) * 3);
        data->params_id[0] = malloc(sizeof(char) * 5);
        strcpy(data->params_id[0], "s");
        data->params_id[1] = malloc(sizeof(char) * 5);
        strcpy(data->params_id[1], "i");
        data->params_id[2] = malloc(sizeof(char) * 5);
        strcpy(data->params_id[2], "j");
        SymtableAddItem(stack->array[stack->size - 1], substr, data);

        // func ord(_ c: String) -> Int
        data = CreateData(true, 0);
        char *ord = malloc(sizeof(char) * 10);
        strcpy(ord, "ord");
        data->item_type = TYPE_INT;
        data->can_be_nil = false;
        data->is_modifiable = false;
        data->string_value = ord;
        data->param_names = malloc(sizeof(char *) * 1);
        data->param_names[0] = NULL;
        data->param_count = 1;
        data->param_types = malloc(sizeof(data_type_t) * 1);
        data->param_types[0] = TYPE_STRING;
        data->params_id = malloc(sizeof(char *) * 1);
        data->params_id[0] = malloc(sizeof(char) * 5);
        strcpy(data->params_id[0], "c");
        SymtableAddItem(stack->array[stack->size - 1], ord, data);

        // func chr(_ i: Int) -> String
        data = CreateData(true, 0);
        char *chr = malloc(sizeof(char) * 10);
        strcpy(chr, "chr");
        data->item_type = TYPE_STRING;
        data->can_be_nil = false;
        data->is_modifiable = false;
        data->string_value = chr;
        data->param_names = malloc(sizeof(char *) * 1);
        data->param_names[0] = NULL;
        data->param_count = 1;
        data->param_types = malloc(sizeof(data_type_t) * 1);
        data->param_types[0] = TYPE_INT;
        data->params_id = malloc(sizeof(char *) * 1);
        data->params_id[0] = malloc(sizeof(char) * 5);
        strcpy(data->params_id[0], "i");
        SymtableAddItem(stack->array[stack->size - 1], chr, data);
        // ###########################################
    }

    Prog(&token, stack, is_first_analysis);

//    SymtableStackPop(stack);
//    SymtableStackDispose(stack);
     printf("%s", g.instructions.str);
    // printf("%s", g.function_call_tmps.str);
    // printf("%s", g.stack_values.str);
    cleanup_generator(&g);
}

bool Prog(Lexeme *token, symtable_stack_t *stack, bool is_first_analysis) {
    symtable_item_t *item = NULL;
    if (is_first_analysis) {
        while (token->kind != LEX_EOF && token->kind != FUNC) {
            GETTOKEN()
        }
    }

    // <PROG> -> LEX_EOF
    if (token->kind == LEX_EOF) return true;

    // <PROG> -> <SEQUENCE> <PROG>
    if (token->kind == IDENTIFIER || token->kind == IF || token->kind == LET || token->kind == WHILE || token->kind == VAR) {
        if (!Sequence(token, stack)) {
            ERROR_HANDLE(SYNTAX_ERROR, token)
        }

        if (!Prog(token, stack, is_first_analysis)) {
            ERROR_HANDLE(SYNTAX_ERROR, token)
        }

        return true;
    }

    // <PROG> -> FUNC IDENTIFIER LEFT_PAR <FIRST_PARAM_DEF> <DEF_FUNCTION> <PROG>
    if (token->kind == FUNC) {
        GETTOKEN()
        if (is_first_analysis) {
            function_gen(&g, token);
            if (token->kind != IDENTIFIER) { ERROR_HANDLE(SYNTAX_ERROR, token) }

            item = SymtableSearchAll(stack, token->extra_data.string);
            if (item != NULL) {
                ERROR_HANDLE(DEFINITION_ERROR, token) //TODO: find out what error code to use
            }
            data_t *data = CreateData(true, token->line);
            SymtableAddItem(stack->array[stack->size - 1], token->extra_data.string, data);
            item = SymtableSearchAll(stack, token->extra_data.string);

            CREATE_FRAME()

            GETTOKEN()

            if (token->kind != LEFT_PAR) {
                ERROR_HANDLE(SYNTAX_ERROR, token)
            }
            GETTOKEN()

            if (!FirstParamDef(token, stack, item)) {
                ERROR_HANDLE(SYNTAX_ERROR, token)
            }

            SymtableStackPop(stack);
        }
        if (!is_first_analysis) {
            if (token->kind != IDENTIFIER) { ERROR_HANDLE(SYNTAX_ERROR, token) }
            item = SymtableSearchAll(stack, token->extra_data.string);
            if (item == NULL) {
                ERROR_HANDLE(UNDEFINED_VAR_ERROR, token)
            }
            while (token->kind != LEFT_BRACKET) {
                GETTOKEN()
            }
        }

        if (!DefFunction(token, stack, item, is_first_analysis)) {
            ERROR_HANDLE(SYNTAX_ERROR, token)
        }

        if (!Prog(token, stack, is_first_analysis))
            { ERROR_HANDLE(SYNTAX_ERROR, token) }

        return true;
    }

    { ERROR_HANDLE(SYNTAX_ERROR, token) }
}

bool Sequence(Lexeme *token, symtable_stack_t *stack) {
    symtable_item_t *item = NULL;

    // <SEQUENCE> -> <VAR_DEF> IDENTIFIER <VAR_TYPE_OR_ASSIGN>
    if (token->kind == LET || token->kind == VAR) {
        bool is_var = false;

        if (!VarDef(token, stack, &is_var))
            { ERROR_HANDLE(SYNTAX_ERROR, token) }
        if (token->kind != IDENTIFIER)
            { ERROR_HANDLE(SYNTAX_ERROR, token) }
        define_var(&g, token, stack);

        item = SymtableSearch(stack->array[stack->size - 1], token->extra_data.string);
        if (item != NULL) {
            ERROR_HANDLE(DEFINITION_ERROR, token)
        }

        data_t *data = CreateData(false, token->line);

        data->is_modifiable = is_var;

        item = malloc(sizeof(symtable_item_t));
        if (item == NULL) {
            fprintf(stderr, "Error: symtable.c - malloc failed\n");
            exit(INTERNAL_ERROR);      // EXIT CODE 99 - failed to allocate memory
        }

        item->data = data;
        item->key = token->extra_data.string;

        //SymtableAddItem(stack->array[stack->size - 1], token->extra_data.string, data);
        //item = SymtableSearchAll(stack, token->extra_data.string);

        GETTOKEN()
        if (!VarTypeOrAssign(token, stack, item))
            { ERROR_HANDLE(SYNTAX_ERROR, token) }

        SymtableAddItem(stack->array[stack->size - 1], item->key, data);
        return true;
    }

    // <SEQUENCE> -> IDENTIFIER <ASSIGN_OR_FUNCTION>
    else if (token->kind == IDENTIFIER) {
        Lexeme temp_token = *token;
        item = SymtableSearchAll(stack, token->extra_data.string);

        if (item == NULL) {
            GETTOKEN()
            if (token->kind == ASSIGNMENT) {
                ERROR_HANDLE(UNDEFINED_VAR_ERROR, token)
            }
            else if (token->kind == LEFT_PAR) {
                ERROR_HANDLE(DEFINITION_ERROR, token)
            }
            else {
                ERROR_HANDLE(SYNTAX_ERROR, token)
            }
        }

        if (!item->data->is_function) {
            assign_var_0(&g, token, stack);
        }

        GETTOKEN()
        if (!AssignOrFunction(token, stack, item, &temp_token))
            { ERROR_HANDLE(SYNTAX_ERROR, token) }

        return true;
    }

    // <SEQUENCE> -> IF <IF_EXP> LEFT_BRACKET <SEQUENCE_N> RIGHT_BRACKET <ELSE_STAT>
    else if (token->kind == IF) {
        symtable_item_t *variable = NULL;
        GETTOKEN()
        if (!IfExp(token, stack, &variable))
            { ERROR_HANDLE(SYNTAX_ERROR, token) }

        if (token->kind != LEFT_BRACKET)
            { ERROR_HANDLE(SYNTAX_ERROR, token) }
        GETTOKEN()

        //creating a new frame for if clause
        CREATE_FRAME()

        if (variable != NULL) {
            data_t *data = malloc(sizeof(data_t));
            if (data == NULL) {
                ERROR_HANDLE(INTERNAL_ERROR, token)
            }
            *data = *(variable->data);
            int id_len = (int)strlen(variable->key);
            char *key = malloc(sizeof(char) * (id_len + 1));
            strcpy(key, variable->key);
            data->can_be_nil = false;
            SymtableAddItem(stack->array[stack->size - 1], key, data);
        }

        if (!SequenceN(token, stack))
            { ERROR_HANDLE(SYNTAX_ERROR, token) }

        //deleting assigned frame
        SymtableStackPop(stack);

        if (token->kind != RIGHT_BRACKET)
            { ERROR_HANDLE(SYNTAX_ERROR, token) }
        GETTOKEN()

        if (!ElseStat(token, stack))
            { ERROR_HANDLE(SYNTAX_ERROR, token) }

        return true;
    }
    // <SEQUENCE> -> WHILE <EXPRESSION> LEFT_BRACKET <SEQUENCE_N> RIGHT_BRACKET
    else if (token->kind == WHILE) {
        GETTOKEN()
        if (!Expression(token, stack, NULL, true, false, false))
            { ERROR_HANDLE(SYNTAX_ERROR, token) }

        if (token->kind != LEFT_BRACKET)
            { ERROR_HANDLE(SYNTAX_ERROR, token) }
        GETTOKEN()

        //creating a new frame for if clause
        CREATE_FRAME()

        if(!SequenceN(token, stack))
            { ERROR_HANDLE(SYNTAX_ERROR, token) }

        //deleting assigned frame
        SymtableStackPop(stack);

        if(token->kind != RIGHT_BRACKET)
            { ERROR_HANDLE(SYNTAX_ERROR, token) }
        GETTOKEN()

        return true;
    }

    //ukoncenie rekurzie
    else if (token->kind == RIGHT_BRACKET || token->kind == LEX_EOF) {
        return true;
    }
    return false;
}

bool SequenceN(Lexeme *token, symtable_stack_t *stack) {
    // <SEQUENCE_N> -> ε
    if (token->kind == RIGHT_BRACKET || token->kind == RETURN) {
        return true;
    }
    // <SEQUENCE_N> -> <SEQUENCE> <SEQUENCE_N>
    if (token->kind == IDENTIFIER || token->kind == IF || token->kind == LET || token->kind == WHILE || token->kind == VAR) {
        if (!Sequence(token, stack))
            { ERROR_HANDLE(SYNTAX_ERROR, token) }

        if (!SequenceN(token, stack))
            { ERROR_HANDLE(SYNTAX_ERROR, token) }

        return true;
    }
    return false;
}

bool AssignOrFunction(Lexeme *token, symtable_stack_t *stack, symtable_item_t *item, Lexeme *temp_token) {
    // <ASSIGN_OR_FUNCTION> -> ASSIGNMENT <EXP_OR_CALL>
    if (token->kind == ASSIGNMENT) {
        if (item->data->is_function) {
            ERROR_HANDLE(OTHER_SEMANTIC_ERROR, token)
        }
        if (!item->data->is_modifiable) {
            if (item->data->was_initialized) {
                ERROR_HANDLE(OTHER_SEMANTIC_ERROR, token) //TODO: find out what error code to use
            }
        }
        item->data->was_initialized = true;
        GETTOKEN()
        if (!ExpOrCall(token, stack, item, true))
            { ERROR_HANDLE(SYNTAX_ERROR, token) }
        return true;
    }
    // <ASSIGN_OR_FUNCTION> -> LEFT_PAR <FIRST_PARAM>
    if (token->kind == LEFT_PAR){
        int counter;
        bool is_not_write = true;
        if (strcmp(item->key, "write") == 0) {
            is_not_write = false;
            WriteFunc(token, stack, &counter);
        }
        if (is_not_write) {
            if (!item->data->is_function) {
                ERROR_HANDLE(OTHER_SEMANTIC_ERROR, token)
            }
            GETTOKEN()
            if (!FirstParam(token, stack, item)) { ERROR_HANDLE(SYNTAX_ERROR, token) }
        }
        function_call_gen_prep(&g, temp_token, counter);
        func_call(&g);
        return true;
    }
    return false;
}

bool DefFunction(Lexeme *token, symtable_stack_t *stack, symtable_item_t *temp_token, bool is_first_analysis) {
    // <DEF_FUNCTION> -> <VOID_F> LEFT_BRACKET <SEQUENCE_N> <RETURN_FUNCTION> RIGHT_BRACKET
    if (is_first_analysis) {
        if (token->kind == LEFT_BRACKET || token->kind == ARROW) {
            if (!VoidF(token, stack, temp_token)) { ERROR_HANDLE(SYNTAX_ERROR, token) }

            if (token->kind != LEFT_BRACKET) { ERROR_HANDLE(SYNTAX_ERROR, token) }
            GETTOKEN()

            return true;
        }
    }
    else {
        if (token->kind != LEFT_BRACKET) {
            ERROR_HANDLE(SYNTAX_ERROR, token)
        }
        GETTOKEN()

        CREATE_FRAME()

        for (int i = 0; i < temp_token->data->param_count; i++) {
            if (temp_token->params[i] != NULL) {
                temp_token->params[i]->data->is_modifiable = false;
                temp_token->params[i]->data->was_initialized = true;
                SymtableAddItem(stack->array[stack->size - 1], temp_token->params[i]->key, temp_token->params[i]->data);
            }
        }

        if (!SequenceN(token, stack))
            { ERROR_HANDLE(SYNTAX_ERROR, token) }

        if (!ReturnFunction(token, stack, temp_token))
            { ERROR_HANDLE(SYNTAX_ERROR, token) }

        if (!SequenceN(token, stack))
            { ERROR_HANDLE(SYNTAX_ERROR, token) }

        //deleting assigned frame
        SymtableStackPop(stack);

        if (token->kind != RIGHT_BRACKET)
            { ERROR_HANDLE(SYNTAX_ERROR, token) }
        GETTOKEN()

        return true;
    }
    return false;
}

bool VoidF(Lexeme *token, symtable_stack_t *stack, symtable_item_t *temp_token) {
    // <VOID_F> -> ε
    if (token->kind == LEFT_BRACKET) {
        return true;
    }
    // <VOID_F> -> ARROW <TYPE>
    if (token->kind == ARROW) {
        GETTOKEN()

        if (!Type(token, stack, temp_token, false, NULL)) {
            ERROR_HANDLE(SYNTAX_ERROR, token)
        }

        return true;
    }
    return false;
}

bool ReturnFunction(Lexeme *token, symtable_stack_t *stack, symtable_item_t *temp_token) {
    // <RETURN_FUNCTION> -> RETURN <RETURN_FUNCTION_N>
    if (token->kind == RETURN){
        *token = get_next_new_line_or_lexeme();
        if (!ReturnFunctionN(token, stack, temp_token))
            { ERROR_HANDLE(SYNTAX_ERROR, token) }

        return true;
    }
    // <RETURN_FUNCTION> -> ε
    if (token->kind == RIGHT_BRACKET) {
        if (temp_token->data->item_type != TYPE_UNDEFINED) {
            ERROR_HANDLE(RETURN_ERROR, token)
        }
        return true;
    }

    return false;
}

bool ReturnFunctionN(Lexeme *token, symtable_stack_t *stack, symtable_item_t *temp_token) {
    // <RETURN_FUNCTION_N> -> ε
    if (token->kind == RIGHT_BRACKET || token->kind == NEWLINE) {
        if (temp_token->data->item_type != TYPE_UNDEFINED) {
            ERROR_HANDLE(RETURN_ERROR, token)
        }
        GETTOKEN()
        return true;
    }

    // <RETURN_FUNCTION_N> -> <EXPRESSION>
    if (token->kind == IDENTIFIER || token->kind == INTEGER_LIT || token->kind == DOUBLE_LIT || token->kind == STRING_LIT || token->kind == LEFT_PAR || token->kind == NIL) {
        if (!Expression(token, stack, temp_token, false, true, true))
            { ERROR_HANDLE(SYNTAX_ERROR, token) }
        return true;
    }
    return false;
}

bool  FirstParamDef(Lexeme *token, symtable_stack_t *stack, symtable_item_t *temp_token) {
    // <FIRST_PARAM_DEF> -> RIGHT_PAR
    if (token->kind == RIGHT_PAR) {
        GETTOKEN()
        return true;
    }
    // <FIRST_PARAM_DEF> -> <PARAMS_DEF> <PARAMS_DEF_N>
    if (token->kind == IDENTIFIER || token->kind == UNDERSCORE) {
        if (!ParamsDef(token, stack, temp_token))
            { ERROR_HANDLE(SYNTAX_ERROR, token) }

        if(!ParamsDefN(token, stack, temp_token))
            { ERROR_HANDLE(SYNTAX_ERROR, token) }

        return true;
    }
    return false;
}

bool ParamsDef(Lexeme *token, symtable_stack_t *stack, symtable_item_t *temp_token) {
    symtable_item_t *param_id_item = NULL;
    bool first_or_second = true;
    // <PARAMS_DEF> -> <PARAMS_NAME_DEF> <PARAMS_NAME_DEF> COLON <TYPE>
    if (token->kind == UNDERSCORE || token->kind == IDENTIFIER) {
        if (!ParamsNameDef(token, stack, temp_token, first_or_second, &param_id_item))
            { ERROR_HANDLE(SYNTAX_ERROR, token) }
        first_or_second = false;

        if (token->kind == IDENTIFIER || token->kind == UNDERSCORE) {
            if (!ParamsNameDef(token, stack, temp_token, first_or_second, &param_id_item))
                { ERROR_HANDLE(SYNTAX_ERROR, token) }
        }
        else { ERROR_HANDLE(SYNTAX_ERROR, token) }

        if (temp_token->data->param_names[temp_token->data->param_count - 1] != NULL && temp_token->data->params_id[temp_token->data->param_count - 1] != NULL) {
            if (strcmp(temp_token->data->param_names[temp_token->data->param_count - 1], temp_token->data->params_id[temp_token->data->param_count - 1]) == 0) {
                ERROR_HANDLE(OTHER_SEMANTIC_ERROR, token)
            }
        }

        if (token->kind != COLON)
            { ERROR_HANDLE(SYNTAX_ERROR, token) }

        GETTOKEN()
        if (!Type(token, stack, param_id_item, true, temp_token)) //TODO: finish semantics in TYPE
            { ERROR_HANDLE(TYPE_DEDUCTION_ERROR, token) }

        temp_token->params = realloc(temp_token->params, sizeof(symtable_item_t*) * temp_token->data->param_count);
        if (temp_token->params == NULL) {
            fprintf(stderr, "Error: parser.c - ParamsNameDef() - realloc failed\n");
            exit(INTERNAL_ERROR);
        }
        if (param_id_item == NULL) {
            temp_token->params[temp_token->data->param_count - 1] = NULL;
            return true;
        }
        symtable_item_t *item = malloc(sizeof(symtable_item_t));
        if (item == NULL) {
            fprintf(stderr, "Error: symtable.c - malloc failed\n");
            exit(INTERNAL_ERROR);      // EXIT CODE 99 - failed to allocate memory
        }
        data_t *data = CreateData(false, token->line);

        int id_len = (int)strlen(param_id_item->key);
        item->key = malloc(sizeof(char) * (id_len + 1));
        strcpy(item->key, param_id_item->key);
        *data = *(param_id_item->data);
        item->data = data;
        temp_token->params[temp_token->data->param_count - 1] = item;
        return true;
    }
    return false;
}

bool ParamsNameDef(Lexeme *token, symtable_stack_t *stack, symtable_item_t *temp_token, bool first_or_second, symtable_item_t **param_id_item) {
    //symtable_item_t *item = SymtableSearchAll(stack, temp_token->extra_data.string);
    if (first_or_second) {
        temp_token->data->param_count++;
        temp_token->data->param_names = realloc(temp_token->data->param_names, sizeof(char *) * temp_token->data->param_count);
        if (temp_token->data->param_names == NULL) {
            fprintf(stderr, "Error: parser.c - ParamsNameDef() - realloc failed\n");
            exit(INTERNAL_ERROR);
        }
    }
    else {
        temp_token->data->params_id = realloc(temp_token->data->params_id,
                                              sizeof(char *) * temp_token->data->param_count);
        if (temp_token->data->params_id == NULL) {
            fprintf(stderr, "Error: parser.c - ParamsNameDef() - realloc failed\n");
            exit(INTERNAL_ERROR);
        }
    }
    // <PARAMS_NAME_DEF> -> UNDERSCORE
    if (token->kind == UNDERSCORE) {
        if (first_or_second) temp_token->data->param_names[temp_token->data->param_count - 1] = NULL;
        else temp_token->data->params_id[temp_token->data->param_count - 1] = NULL;
        GETTOKEN()
        return true;
    }
    // <PARAMS_NAME_DEF> -> IDENTIFIER
    if (token->kind == IDENTIFIER) {
        if (first_or_second) {
            temp_token->data->param_names[temp_token->data->param_count - 1] = token->extra_data.string;
        }
        else {
            temp_token->data->params_id[temp_token->data->param_count - 1] = token->extra_data.string;
            *param_id_item = SymtableSearch(stack->array[stack->size - 1], token->extra_data.string);
            if (*param_id_item != NULL) {
                ERROR_HANDLE(DEFINITION_ERROR, token)
            }
            data_t *data = CreateData(false, token->line);
            SymtableAddItem(stack->array[stack->size - 1], token->extra_data.string, data);
            *param_id_item = SymtableSearchAll(stack, token->extra_data.string);
        }
        GETTOKEN()
        return true;
    }
    return false;
}

bool ParamsDefN(Lexeme *token, symtable_stack_t *stack, symtable_item_t *temp_token) {
    // <PARAMS_DEF_N> -> RIGHT_PAR
    if (token->kind == RIGHT_PAR) {
        GETTOKEN()
        return true;
    }
    // <PARAMS_DEF_N> -> COMMA <PARAMS_DEF> <PARAMS_DEF_N>
    if (token->kind == COMMA){
        GETTOKEN()
        if (!ParamsDef(token, stack, temp_token))
            { ERROR_HANDLE(SYNTAX_ERROR, token) }

        if(!ParamsDefN(token, stack, temp_token))
            { ERROR_HANDLE(SYNTAX_ERROR, token) }

        return true;
    }
    return false;
}

bool FirstParam(Lexeme *token, symtable_stack_t *stack, symtable_item_t *item){
    //symtable_item_t *item = SymtableSearchAll(stack, temp_token->extra_data.string);
    item->data->param_count_current = 0;
    // <FIRST_PARAM> -> RIGHT_PAR
    if (token->kind == RIGHT_PAR) {
        if (item->data->param_count != 0) {     //TODO: what about function(_ _) ?
            ERROR_HANDLE(PARAMETER_TYPE_ERROR, token) //TODO: find out what error code to use
        }
        GETTOKEN()
        return true;
    }
    // <FIRST_PARAM> -> <PARAMS> <PARAMS_N>
    if (token->kind == INTEGER_LIT || token->kind == IDENTIFIER || token->kind == STRING_LIT || token->kind == DOUBLE_LIT) {
        if (item->data->param_count == 0) {     //TODO: what about function(_ _) ?
            ERROR_HANDLE(PARAMETER_TYPE_ERROR, token) //TODO: find out what error code to use
        }
        if (!Params(token, stack, item))
        { ERROR_HANDLE(SYNTAX_ERROR, token) }

        if(!ParamsN(token, stack, item))
        { ERROR_HANDLE(SYNTAX_ERROR, token) }
        return true;
    }
    return false;
}

bool ParamsN(Lexeme *token, symtable_stack_t *stack, symtable_item_t *item) {
    // <PARAMS_N> -> RIGHT_PAR
    if (token->kind == RIGHT_PAR) {
        if (item->data->param_count_current != item->data->param_count) {
            ERROR_HANDLE(PARAMETER_TYPE_ERROR, token)
        }
        GETTOKEN()
        return true;
    }

    // <PARAMS_N> -> COMMA <PARAMS> <PARAMS_N>
    if (token->kind == COMMA){
        GETTOKEN()
        if (!Params(token, stack, item))
            { ERROR_HANDLE(SYNTAX_ERROR, token) }

        if(!ParamsN(token, stack, item))
            { ERROR_HANDLE(SYNTAX_ERROR, token) }

        return true;
    }
    return false;
}
